package com.example.event.consumer;

import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;

@Target(ElementType.TYPE)
@Retention(RetentionPolicy.RUNTIME)
public @interface RoutedEventConsumer {

    String consumerName();

    ConsumerRoutingMode defaultMode() default ConsumerRoutingMode.DIRECT;
}
